<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="suggestions_cities">
        <item>Casablanca</item>
        <item>Mohammadia</item>
        <item>Rabat</item>
        <item>Fes</item>
        <item>Temara</item>
    </string-array>

    <string name="app_name">Karnet2</string>
    <string name="str_no_order">Aucune commande</string>
    <string name="str_no_customer">Aucun client</string>
    <string name="drawer_order">Commandes</string>
    <string name="drawer_stock">Stock</string>
    <string name="drawer_customer">Clients</string>
    <string name="drawer_ingredients">Ingredients</string>
    <string name="nav_drawer_open">Menu de navigation ouvert</string>
    <string name="nav_drawer_close">Menu de nvigation fermé</string>
    <string name="add_customer">Ajouter un client</string>
    <string name="add_order">Ajouter une commande</string>
    <string name="fragment_products_label">Produits</string>
    <string name="fragment_orders_label">Commandes</string>
    <string name="fragment_about_label">A propos</string>
    <string name="fragment_stock_label">Stock</string>
    <string name="fragment_customer_label">Clients</string>
    <string name="drawer_about">A propos</string>
    <string name="hint_name">Nom</string>
    <string name="hint_phone_num">N° de téléphone</string>
    <string name="hint_city">Ville</string>
    <string name="fragment_add_customer_label">Ajouter un client</string>
    <string name="hint_date">Date</string>
    <string name="toast_invalid_phone_num">Numéro de téléphone invalide</string>
    <string name="name_too_short">Nom trop court</string>
    <string name="invalid_date">Date invalide</string>
    <string name="city_too_short">Nom de ville trop court</string>
    <string name="modify_customer">Modifier le client</string>
    <string name="customer_removed">Client supprimé</string>
    <string name="undo">Annuler</string>
    <string name="sort_ab">A-Z</string>
    <string name="sort_ba">Z-A</string>
    <string name="sort_city_ab">Ville (A-Z)</string>
    <string name="sort_city_ba">Ville (Z-A)</string>
    <string name="add_product">Ajouter un produit</string>
    <string name="select_base_ingredient">Sélectionner un ingredient de base</string>
    <string name="select_extra">Sélectionner les additives</string>
    <string name="select_type">Sélectionner le type</string>
    <string name="select_shape">Sélectionner la forme</string>
    <string name="select_fat">Sélectionner la matière grasse</string>
    <string name="new_categ">Nouveau</string>
    <string name="dialog_positive">@android:string/ok</string>
    <string name="dialog_negative">Annuler</string>
    <string name="dialog_neutral">Retour</string>
    <string name="hint_enter_text">Entrer du texte</string>
    <string name="enter_name">Entrer un nom</string>
    <string name="hint_unit_price">Prix de la boîte</string>
    <string name="add_product_invalid_name">Nom de produit trop court</string>
    <string name="add_product_invalid_unit_price">Prix invalide</string>
    <string name="add_product_invalid_base">Ingrédient de base pas sélectionner</string>
    <string name="add_product_invalid_fat">Matière grasse pas sélectionner</string>
    <string name="add_product_invalid_shape">Forme pas sélectionner</string>
    <string name="add_product_invalid_type">Type pas sélectionner</string>
    <string name="choose_price">Choisir le prix</string>
    <string name="new_extra_category">Nouveau</string>
    <string name="str_no_product">Aucun produit</string>
    <string name="product_removed">Produit supprimé</string>
    <string name="modify_product">Modifier le produit</string>
    <string name="all_extras">Tout les additives</string>
    <string name="enter_value">Entrer une valeur</string>
    <string name="hint_delivery_price">Prix de livraison</string>
    <string name="str_no_stack">Cliquer sur + pour ajouter un nouvelle élément</string>
    <string name="order_removed">Commande supprimé</string>
    <string name="modify_order">Modifier la commande</string>
    <string name="hint_order_date">Date de livraison</string>
    <string name="choose_customer">Choisir un client</string>
    <string name="select_customer">Sélectionner un client</string>
    <string name="hint_filter">Filtre</string>
    <string name="select_delivery_price">Sélectionner le prix de livraison</string>
    <string name="invalid_customer">Veuiller choisir un client</string>
    <string name="toast_add_customer">Veuiller ajouter a client</string>
    <string name="select_product">Sélectionner un produit</string>
    <string name="select_count">Sélectionner le nombre</string>
    <string name="add_products">Veuiller ajouter un produit</string>
    <string name="confirmation">Confirmation</string>
    <string name="insufficient_stock">Stock insuffisant</string>
    <string name="search">Recherche</string>
    <string name="modify_order_label">Modifier la commande pour: %s</string>
    <string name="confirm_order_delete">Êtes vous sûr de vouloir valider la commande de %s?</string>
    <string name="order_details_label">Commande pour: %s</string>
    <string name="price">Total: %d dhs</string>
    <string name="currency">%d dhs</string>
    <string name="order_details_item_description">%d boîtes x %d dhs</string>
    <string name="total_with_delivery_price">Total + livraison: %d dhs</string>
    <string name="fragment_ingredient">Ingrédient</string>
    <string name="str_no_ingredient">Aucun ingrédient</string>
    <string name="add_ingredient">Ajouter un Ingrédient</string>
    <string name="new_ingredient">Nouveau ingrédient</string>
    <string name="done">Terminé</string>
    <string name="ingredient_name">Nom de l\'ingrédient</string>
    <string name="hint_price">hint_price</string>
    <string name="ingredient_removed">Ingrédient supprimé</string>
    <string name="modify">Modifier %s</string>
    <string name="missing_ingredients">Veuillez ajouter des ingrédients premièrement</string>
    <string name="stock_filter_title">Filtrer le stock</string>
    <string name="modify_filter_dialog_title">Modifier le filtre</string>
    <string name="clear_selection">Désélectionner tout</string>
    <string name="more_details">Plus de détails</string>
    <string name="show_all_orders_text">Tout les commandes seront affichés</string>
    <string name="show_only_delivery_orders_text">Seulement les commandes avec livraison seront affichés</string>
    <string name="delivery">Livraison</string>
    <string name="delivery_total">Total: %d dhs</string>
    <string name="default_city">Casablanca</string>
    <string name="sync">Sync</string>
    <string name="wait">Veuillez patienter</string>
    <string name="order_customer_info">%d %s</string>
    <string name="show_not_delivery">Seulement les commandes sans livraison seront affichés</string>
    <string name="hint_reduction">Réduction</string>
    <string name="reduction_text">Réduction: %d dhs</string>
    <string name="text_for_date">Pour le: %s</string>
    <string name="drawer_stats">Statistiques</string>
    <string name="stats_all">Tous</string>
    <string name="stats_month">Ce mois</string>
    <string name="stats_week">Cette semaine</string>
    <string name="stats_today">Aujourd\'hui</string>
    <string name="stats_custom">Depuis …</string>
    <string name="table">Tableau</string>
    <string name="city_filter">Filtrer par Ville</string>
    <string name="hint_enter_number">Entrer un nombre</string>
    <string name="invalid_number">Nombre invalide</string>
    <string name="select_cities">Choisir des villes</string>
    <string name="show_orders_no_delivery">Afficher les commandes sans livraison</string>
    <string name="show_orders_all">Afficher tout les commandes</string>
    <string name="show_orders_delivery">Afficher les commandes avec livraison</string>
    <string name="syncing">Synchronization en cours</string>
    <string name="synced">Clients synchronizé</string>
    <string name="remove_date_filter">Annuler le filtre date</string>
    <string name="choose_date_filter">Filtrer par date</string>
    <string name="limit_date">Date limite</string>
    <string name="update">Mise à jour</string>
    <string name="default_notification_channel">Notification général</string>
    <string name="download_complete">Téléchargement terminé</string>
    <string name="operation_cancel">Opération Annulé</string>
    <string name="select_date">Sélectionner une date</string>
    <string name="permission_not_granted">Permission refusée</string>
    <string name="download_update">Mise à jour de Karnet</string>
    <string name="no_update_available">Karnet est déja à jour</string>
    <string name="backup_internal_files">Sauvegarder les fichers internes</string>
    <string name="download_external_backup_files">Remmettre la dernière sauvegarde</string>
    <string name="file_copy_error">Erreur de copie de ficher</string>
    <string name="backup_success">Fichier sauvegarder(Karnet/save.bin)</string>
    <string name="unable_to_load">Problème au chargement de nouveau donné</string>
    <string name="load_backup_success">Sauvgarde restaurée</string>
    <string name="backup_log_success">Journal sauvegarder(Karnet/logs.txt)</string>
    <string name="modify_stock_password_title">Modifier le mot de passe</string>
    <string name="password">Mot de passe</string>
    <string name="enter_password">Entrer votre mot de passe</string>
    <string name="modify_stock_password">Modifier le mot de passe</string>
    <string name="invalid_password">Mot de passe invalide</string>
    <string name="new_password">Nouveau Mot de Passe</string>
    <string name="confirm_password">Confirmer le mot de passe</string>
    <string name="confirm_not_math">Verifier la confirmation du mot de passe</string>
    <string name="deliver_date_filter">Filtrer par date</string>
    <string name="delivery_fragment">Livraison</string>
    <string name="stock_orders_fragment">Stock - Commandes</string>
    <string name="statistics_fragment">Statistiques</string>
    <string name="stock_table_fragment">Stock(Tableau)</string>
    <string name="packets_count">Nb de paquets</string>
    <string name="raw_total">Sous total</string>
    <string name="coupon">Remise</string>
    <string name="total">Total</string>
</resources>
