<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/orderFragment"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/drawer_order" />
        <item
            android:id="@+id/stockFragment"
            android:icon="@drawable/ic_list"
            android:title="@string/drawer_stock" />
        <item
            android:id="@+id/customerFragment"
            android:icon="@drawable/ic_identity"
            android:title="@string/drawer_customer" />
        <item
            android:id="@+id/ingredientFragment"
            android:icon="@drawable/ic_business_center"
            android:title="@string/drawer_ingredients" />
        <item
            android:id="@+id/statisticsFragment"
            android:icon="@drawable/ic_chart"
            android:title="@string/drawer_stats" />
        <item
            android:id="@+id/aboutFragment"
            android:icon="@drawable/ic_info"
            android:title="@string/drawer_about" />
    </group>
</menu>