<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/option_stock_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/option_stock_filter"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_filter"
        android:title="@string/stock_filter_title"/>

    <item
        android:id="@+id/option_add_stock"
        app:showAsAction="always"
        android:icon="@drawable/ic_add"
        android:title="@string/add_order" />
    <item
        android:id="@+id/options_table_stock"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_table_chart"
        android:title="@string/table" />


</menu>