<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp" >

    <Button
        android:id="@+id/btn_filter_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_base_ingredient"
        android:layout_marginTop="24dp" />

    <Button
        android:id="@+id/btn_filter_fat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_fat"
        android:layout_marginTop="12dp" />
    <Button
        android:id="@+id/btn_filter_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_shape"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btn_filter_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_type"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btn_filter_extra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_extra"
        android:layout_marginTop="12dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_select_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"/>

</LinearLayout>