<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:ignore="HardcodedText"
    tools:context=".ui.fragments.product.ProductAddModifyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/ic_text"
            android:scaleX="1.0"
            android:scaleY="1.0" />

        <EditText
            android:id="@+id/edit_text_add_product_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="-name-"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp" >

        <Button
            android:id="@+id/btn_select_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_base_ingredient" />
        <Button
            android:id="@+id/btn_select_fat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_fat" />
        <Button
            android:id="@+id/btn_select_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_shape" />
        <Button
            android:id="@+id/btn_select_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_type" />
        <Button
            android:id="@+id/btn_select_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_extra" />

    </LinearLayout>



</LinearLayout>