<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ui.fragments.AboutFragment">

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update" />
    <Button
        android:id="@+id/btn_backup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backup_internal_files" />
    <Button
        android:id="@+id/btn_load_backup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_external_backup_files" />

</LinearLayout>