<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/option_customer_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.widget.SearchView" />
    <item
        android:id="@+id/option_customers_sync"
        android:icon="@drawable/ic_sync"
        android:title="@string/sync"
        app:showAsAction="always" />
    <item
        android:id="@+id/option_add_customer"
        android:icon="@drawable/ic_add"
        android:title="@string/add_customer"
        app:showAsAction="always" />
    <item
        android:id="@+id/option_add_from_contacts"
        android:icon="@drawable/ic_person_add"
        android:title="@string/add_customer"
        app:showAsAction="always" />

</menu>